Fix image align center

--- a/assets/css/editor.css
+++ b/assets/css/editor.css
@@ -43,11 +43,11 @@
 }
 .wp-editor .aligncenter,
 .wp-editor img.aligncenter {
-  margin-right: auto;
-  margin-left: auto;
+  margin-right: auto !important;
+  margin-left: auto !important;
   display: block;
   clear: both;
-  margin-bottom: 10px;
+  margin-bottom: 10px !important;
 }
 .wp-editor .alignnone,
 .wp-editor img.alignnone {
